<resources>
    <string name="app_name">Herbapedia</string>
    <string name="logo">Logo Herbapedia</string>
    <string name="register">Register</string>
    <string name="register_underline"><u>Register</u></string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="no_account_message">Don\'t have an account?</string>
    <string name="have_account_message">Already have an account?</string>
    <string name="onboarding1_image">Onboarding 1 Image</string>
    <string name="onboarding1_title">Informasi Tanaman Obat</string>
    <string name="onboarding1_description">Carilah informasi mengenai informasi tanaman obat yang terdapat disekitarmu</string>
    <string name="onboarding2_image">Onboarding 2 Image</string>
    <string name="onboarding2_title">Informasi Tanaman Obat 2</string>
    <string name="onboarding2_description">2 Carilah informasi mengenai informasi tanaman obat yang terdapat disekitarmu</string>
    <string name="onboarding3_image">Onboarding 3 Image</string>
    <string name="onboarding3_title">Informasi Tanaman Obat 3</string>
    <string name="onboarding3_description">3 Carilah informasi mengenai informasi tanaman obat yang terdapat disekitarmu</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_header">Welcome back</string>
    <string name="register_subheader">Login to your account</string>
    <string name="hint_email_username">email/username</string>
    <string name="hint_password">password</string>
    <string name="back_button">Back Button</string>
    <string name="login_subheader">Create your account</string>
    <string name="hint_email">email</string>
    <string name="hint_full_name">full name</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="terms_condition"><u>Terms &amp; Conditions</u></string>
    <string name="register_note">By signing you <b>agree</b> to our</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_plants">Plants</string>
    <string name="title_setting">Setting</string>
    <string name="icon_setting">Icon Setting</string>
    <string name="greeting_header">Hi, Theophil</string>
    <string name="greeting_subheader">have a great day!</string>
    <string name="hint_search_plant">Search plant’s name</string>
    <string name="icon_scan">Icon Scan</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="icon_maps">Icon Maps</string>
    <string name="plant_image">Plant Image</string>
    <string name="plant_name">Plant Name</string>
    <string name="latin_name">Latin Name</string>
    <string name="nutrient">NUTRIENT</string>
    <string name="cure">CURE FOR</string>
    <string name="nutrient_content">Nutrient Content</string>
    <string name="cure_content">Cure Content</string>
    <string name="read_more">Read More</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="plant_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus leo et ultrices tempus. Vestibulum in ex gravida, lacinia risus nec, bibendum sem.</string>
    <string name="process">HOW TO PROCESS</string>
    <string name="process_content">How to process content</string>
    <string name="logout">Logout</string>
    <string name="plant_latin">Latin Name</string>
</resources>