<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_onboarding"
    app:layoutDescription="@xml/activity_onboarding_scene"
    tools:context=".ui.onboarding.OnboardingActivity">

    <LinearLayout
        android:id="@+id/linear_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_onboarding1"
        android:layout_width="279dp"
        android:layout_height="272dp"
        android:layout_marginTop="55dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_onboarding1"
                android:layout_width="0dp"
                android:layout_height="105dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/onboarding1_image"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/onboarding1" />

            <TextView
                android:id="@+id/tv_onboarding1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/onboarding1_title"
                android:textColor="@color/sacramento"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_onboarding1" />

            <TextView
                android:id="@+id/tv_onboarding1_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="29dp"
                android:fontFamily="@font/inter"
                android:text="@string/onboarding1_description"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_onboarding1"
                app:lineHeight="20dp"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_onboarding2"
        android:layout_width="279dp"
        android:layout_height="252dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="65dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@+id/cv_onboarding1"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_onboarding2"
                android:layout_width="0dp"
                android:layout_height="105dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/onboarding2_image"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/onboarding1" />

            <TextView
                android:id="@+id/tv_onboarding2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/onboarding2_title"
                android:textColor="@color/sacramento"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_onboarding2" />

            <TextView
                android:id="@+id/tv_onboarding2_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="29dp"
                android:fontFamily="@font/inter"
                android:text="@string/onboarding2_description"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_onboarding2"
                app:lineHeight="20dp"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_onboarding3"
        android:layout_width="279dp"
        android:layout_height="252dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="65dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@+id/cv_onboarding2"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_onboarding3"
                android:layout_width="0dp"
                android:layout_height="105dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/onboarding3_image"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/onboarding1" />

            <TextView
                android:id="@+id/tv_onboarding3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/onboarding3_title"
                android:textColor="@color/sacramento"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_onboarding3" />

            <TextView
                android:id="@+id/tv_onboarding3_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="29dp"
                android:fontFamily="@font/inter"
                android:text="@string/onboarding3_description"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_onboarding3"
                app:lineHeight="20dp"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/inter"
        android:text="@string/no_account_message"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_onboarding1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/background_button_register"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="0"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_account" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter"
        android:text="@string/have_account_message"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/background_button_login"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="0"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/sacramento"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_have_account" />
</androidx.constraintlayout.motion.widget.MotionLayout>