<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_plant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="28dp"
    app:cardBackgroundColor="@color/light_white"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="22dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_item_plant_header"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:elevation="2dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/iv_item_plant_image"
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/plant_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sambiloto" />

                <TextView
                    android:id="@+id/tv_plant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="21dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/plant_name"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_item_plant_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_plant_latin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/latin_name"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_item_plant_image"
                    app:layout_constraintTop_toBottomOf="@+id/tv_plant_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_card_plant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_nutrient_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing="0.2"
            android:text="@string/nutrient"
            android:textColor="@color/sacramento"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_card_plant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_item_plant_header" />

        <TextView
            android:id="@+id/tv_nutrient_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter"
            android:text="@string/nutrient_content"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_card_plant"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nutrient_header"
            app:lineHeight="20sp" />

        <TextView
            android:id="@+id/tv_cure_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="19dp"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing="0.2"
            android:text="@string/cure"
            android:textColor="@color/sacramento"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline_card_plant"
            app:layout_constraintTop_toBottomOf="@+id/cv_item_plant_header" />

        <TextView
            android:id="@+id/tv_cure_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="19dp"
            android:fontFamily="@font/inter"
            android:text="@string/cure_content"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline_card_plant"
            app:layout_constraintTop_toBottomOf="@+id/tv_cure_header"
            app:lineHeight="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_read_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/background_button_register"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing="0"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:text="@string/read_more"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cure_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>